# Educator

./: Cargo.toml
back/: Cargo.toml
back/src/: api.rs  lib.rs  main.rs  schema.rs  transactions.rs
back/src/classes/: mod.rs
back/src/hard_storage/: mod.rs
back/src/proto/: educator.proto  mod.rs
back/src/smartContract/: mod.rs
back/tests/: api.rs
backend/: .gitignore
backend/src/: api.rs  lib.rs
backend/src/proto/: educator.proto
backend/tests/: api.rs
front/: package.json  server.js
front-temp/nfc/: nfc.sln
front-temp/nfc/nfc/Properties/: AssemblyInfo.cs
front-temp/video/: video.sln
front-temp/video/video/: Shared.cs  main.aspx.cs  main.aspx.designer.cs  video.csproj
front-temp/video/video/Properties/: AssemblyInfo.cs
front/nfc/nfc/: main.aspx  main.aspx.cs  main.aspx.designer.cs  nfc.csproj  packages.config
front/src/pages/: Auth.vue  Transaction.vue  Wallet.vue  regTask.vue
front/src/plugins/: blockchain.js
front/video/video/: Web.config  main.aspx
front/video/video/scripts/: main.js
frontend/: server.js
src/: user.rs
src/proto/: educator.proto  mod.rs
