[package]
name = "educator"
version = "0.12.0"
edition = "2018"
authors = ["Lipin Slava", "Aleksand Kustorv"]
homepage = "https://exonum.com/"
repository = "https://github.com/exonum/exonum"
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "blockchain", "example"]
categories = ["rust-patterns", "development-tools::testing"]
description = "Exonum blockchain example implementing a cryptocurrency."

[badges]
travis-ci = { repository = "exonum/exonum" }
circle-ci = { repository = "exonum/exonum" }

[dependencies]
exonum = { version = "0.12.0"}
exonum-derive = { version = "0.12.0"}
exonum-merkledb = { version = "0.12.0"}
exonum-crypto = { version = "0.12.0"}
exonum-configuration = { version = "0.12.0"}
serde = "1.0.0"
serde_derive = "1.0.0"
failure = "0.1.5"
protobuf = "2.8.0"

[dev-dependencies]
exonum-testkit = { version = "0.12.0"}
serde_json = "1.0.0"
pretty_assertions = "0.6.1"
assert_matches = "1.2.0"
hex = "0.3.2"

[build-dependencies]
exonum-build = { version = "0.12.0"}

[features]
default = ["with-serde"]
with-serde = []
